bat.bool1.sumdouble.SumDouble.scala.error
Erreur de compilation :
SumDouble:3: error: '(' expected but identifier found.
  if a!=b { return a+b} else {return 2*(a+b)}
     ^SumDouble:4: error: illegal start of simple expression
} 
^